--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,40 @@
 <body>
     <h1>BÚSQUEDAS</h1>
     <h2>Costo Uniforme</h2>
+    <ul>
+        <li>EDO.MEX - SLP: 513 KM</li>
+        <li>EDO.MEX - CDMX: 125 KM</li>
+        <li>PUEBLA - SLP: 514 KM</li>
+        <li>CDMX - MICHOACAN: 491 KM</li>
+        <li>CDMX - SLP: 423 KM</li>
+        <li>CDMX - EDO.MEX: 125 KM</li>
+        <li>MICHOACAN - SONORA: 346 KM</li>
+        <li>MICHOACAN - SLP: 355 KM</li>
+        <li>MICHOACAN - MONTERREY: 309 KM</li>
+        <li>MICHOACAN - CDMX: 491 KM</li>
+        <li>SLP - QRO: 203 KM</li>
+        <li>SLP - PUEBLA: 514 KM</li>
+        <li>SLP - EDO.MEX: 513 KM</li>
+        <li>SLP - SONORA: 603 KM</li>
+        <li>SLP - GUADALAJARA: 437 KM</li>
+        <li>SLP - CDMX: 423 KM</li>
+        <li>SLP - MICHOACAN: 355 KM</li>
+        <li>SLP - MONTERREY: 313 KM</li>
+        <li>SLP - HIDALGO: 599 KM</li>
+        <li>QRO - SLP: 203 KM</li>
+        <li>QRO - HIDALGO: 390 KM</li>
+        <li>HIDALGO - QRO: 390 KM</li>
+        <li>HIDALGO - SLP: 599 KM</li>
+        <li>MONTERREY - SLP: 313 KM</li>
+        <li>MONTERREY - SONORA: 296 KM</li>
+        <li>MONTERREY - GUADALAJARA: 394 KM</li>
+        <li>MONTERREY - MICHOACAN: 309 KM</li>
+        <li>SONORA - MONTERREY: 296 KM</li>
+        <li>SONORA - SLP: 603 KM</li>
+        <li>SONORA - MICHOACAN: 346 KM</li>
+        <li>GUADALAJARA - MONTERREY: 394 KM</li>
+        <li>GUADALAJARA - SLP: 437 KM</li>
+    </ul>
     <form action="/buscar_BCU" method="POST">
         <label for="estado_inicial">Estado inicial:</label>
         <input type="text" id="estado_inicial" name="estado_inicial">
@@ -25,6 +59,16 @@
     {% endif %}
 
     <h2>Dijkstra</h2>
+    <h3>Grafo:</h3>
+    <ul>
+        <li>1: {'2': 3, '3': 6}</li>
+        <li>2: {'3': 2, '4': 1}</li>
+        <li>3: {'4': 4, '5': 2}</li>
+        <li>4: {'3': 4, '5': 6}</li>
+        <li>5: {'6': 2, '7': 2}</li>
+        <li>6: {'7': 3}</li>
+        <li>7: {}</li>
+    </ul>
     <form action="/buscar_dijkstra" method="POST">
         <!-- Aquí podrías agregar campos para ingresar los datos necesarios para la búsqueda con Dijkstra -->
         <button type="submit">Buscar</button>
