--- a/static/styles.css
+++ b/static/styles.css
@@ -19,8 +19,12 @@ h1 {
 
 h1, h2 {
     text-align: center;
+    margin-top: 30px; /* Espacio adicional entre el título y el contenido */
 }
 
+h2 {
+    color: #b3cde0; /* Color de subtítulos para que combine con las etiquetas */
+}
 
 form {
     margin-bottom: 20px;
